--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <i class="fas fa-bars toggle-menu"></i>
             <ul>
                 <li><a class="active" href = "#">Home</a></li>
-                <li><a href = "#">Services</a></li>
-                <li><a href = "#">Our Apps</a></li>
-                <li><a href = "#">About</a></li>
-                <li><a href = "#">Pricing</a></li>
-                <li><a href = "#">Contact</a></li>
+                <li><a href = "#Services">Services</a></li>
+                <li><a href = "#Our Apps">Our Apps</a></li>
+                <li><a href = "#About">About</a></li>
+                <li><a href = "#Pricing">Pricing</a></li>
+                <li><a href = "#Contact">Contact</a></li>
             </ul>
             <div class="form">
                 <i class="fas fa-search"></i>
@@ -56,7 +56,7 @@
         </ul>
     </div>
         
-    <div class="services">
+    <div class="services" id="Services">
         <div class="container">
             <div class="main-heading">
             <h2>Services</h2>
@@ -104,7 +104,7 @@
             </div>
         </div>
     </div>
-    <div class="apps">
+    <div class="apps" id="Our Apps">
         <div class="container">
             <div class="main-heading">
             <h2>Our Apps</h2>
@@ -152,7 +152,7 @@
         </div>
         <a href="#" class="more">More</a>
     </div>
-    <div class="about">
+    <div class="about" id="About">
         <div class="container">
             <div class="main-heading">
                 <h2>About Us</h2>
@@ -163,7 +163,7 @@
     </div>
     </div>
     </div>
-    <div class="pricing">
+    <div class="pricing" id="Pricing">
         <div class="container">
         <div class="main-heading">
             <h2>Pricing</h2>
@@ -237,7 +237,7 @@
         <a href="#" class="contact-link">Contact Us</a>
         </div>
     </div>
-    <div class="contact">
+    <div class="contact" id="Contact">
       <div class="container">
         <div class="main-heading">
           <h2>Contact Us</h2>
